--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "init-db": "node db.js --init"
+    "init-db": "node db.js --init",
+    "postinstall": "npm rebuild bcrypt --build-from-source"
   },
   "dependencies": {
     "better-sqlite3": "^8.0.0",
@@ -18,3 +19,4 @@
     "cors": "^2.8.5"
   }
 }
+
