--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "init-db": "node db.js --init",
-    "postinstall": "npm rebuild bcrypt --build-from-source"
+    "postinstall": "npm rebuild bcryptjs --build-from-source"
   },
   "dependencies": {
     "bcryptjs": "^3.0.2",
